update submenu and about.md

--- a/_posts/about/project/2012-02-07-1.md
+++ b/_posts/about/project/2012-02-07-1.md
@@ -1,6 +1,9 @@
 ---
 layout: post
-title: Example Content
+title: Example Content111123124
+categories:
+    - example
+    - exam
 description: >
   Howdy! This is an example blog post that shows several types of HTML content supported in this theme.
 sitemap: false
