--- a/_posts/about/project/2020-07-03-5.md
+++ b/_posts/about/project/2020-07-03-5.md
@@ -1,6 +1,9 @@
 ---
 layout: post
 title: Introducing Hydejack 9
+categories:
+    - example
+    - exam
 image: 
   path: /assets/img/blog/jeremy-bishop@0,5x.jpg
 description: >
@@ -84,5 +87,3 @@ The PRO Version is scheduled to release on July 7th on Gumroad. Pre-Orders are o
       Search was mainly tested for English and German. Please let me know about issues in other languages. 
       While I've tried to find a multi-language solution, most showed drastically worse  results for the English base case.
       If you're technically inclined, you can adopt the code located in `_includes/js/search-worker.js` to your needs.
-
-
