--- a/_posts/about/project/2017-11-23-2.md
+++ b/_posts/about/project/2017-11-23-2.md
@@ -1,6 +1,9 @@
 ---
 layout: post
-title: Example Content II
+title: Example Content II***********
+categories:
+    - example
+    - exam
 description: >
   A page showing how regular markdown content is styled in Hydejack.
 image: /assets/img/blog/example-content-ii.jpg
