Add & Edit _featured_categories files.
To post my ideas, knowledges at my blog add and edit _featured_categories files.

--- a/_posts/database/oracle/2012-02-07-1.md
+++ b/_posts/database/oracle/2012-02-07-1.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: Example Content111123124
+title: oracle1
 categories:
-    - example
-    - exam
+    - database
+    - oracle
 description: >
   Howdy! This is an example blog post that shows several types of HTML content supported in this theme.
 sitemap: false
