--- a/_posts/framework/spring/2021-03-17-test.md
+++ b/_posts/framework/spring/2021-03-17-test.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: Example Content II***********
+title: spring1
 categories:
-    - example
-    - exam
+    - framework
+    - spring
 description: >
   A page showing how regular markdown content is styled in Hydejack.
 image: /assets/img/blog/example-content-ii.jpg
