--- a/_posts/language/javascript/2020-07-03-5.md
+++ b/_posts/language/javascript/2020-07-03-5.md
@@ -1,9 +1,11 @@
 ---
 layout: post
-title: Introducing Hydejack 9
-categories:
-    - example
-    - exam
+title: javascript1
+categories: 
+  - language
+  - javascript
+tags:
+  - langlang
 image: 
   path: /assets/img/blog/jeremy-bishop@0,5x.jpg
 description: >
