--- a/_posts/language/java/2020-07-03-5.md
+++ b/_posts/language/java/2020-07-03-5.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: Introducing Hydejack 9
+title: java1
 categories:
-    - about
-    - project
+    - language
+    - java
 image: 
   path: /assets/img/blog/jeremy-bishop@0,5x.jpg
 description: >
