Post oracle multiple insert

--- a/_posts/language/javascript/2021-03-17-ajax-html-01.md
+++ b/_posts/language/javascript/2021-03-17-ajax-html-01.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: "[jQuery] ajax 비동기통신 - html방식 리턴받기"
+subtitle: ajax / dataType / html
 categories:
     - language
     - javascript
