change config.yml, robots.txt to open at google

--- a/_posts/language/javascript/2021-03-17-ajax-html-01.md
+++ b/_posts/language/javascript/2021-03-17-ajax-html-01.md
@@ -8,7 +8,7 @@ categories:
 description: >
   About the ajax communication with type of return is 'HTML'.
 image: /assets/img/blog/example-content-ii.jpg
-sitemap: true
+sitemap: false
 ---
 
 안녕하세요! Plitche(플리체)입니다.  
