Edit 15nd post content

--- a/_posts/etc/2021-04-18-PowerToys01.md
+++ b/_posts/etc/2021-04-18-PowerToys01.md
@@ -27,9 +27,9 @@ sitemap: false
 이러한 불편함 또한 개선해주고, 이외에도 아래와 같이 여러 기능들을 지원해주고 있어서 참 괜찮은 프로그램이라고 생각한다. ~~특히 디자이너분들?!~~  
 
 **\<제공하고 있는 기능\>**
-1. FancyZones (화면분할)
+1. ColorPicker (색상 추출)
 
-2. ColorPicker (색상 뽑아내기?)
+2. FancyZones (화면분할)
 
 3. ImageResizer (이미지 사이즈 조절)
 
@@ -59,14 +59,14 @@ sitemap: false
 ![](/assets/post/etc/20210418/08.jpg)  
 <font color="gray">역시 개발자는 dark mode! ㅎㅎ</font>
 
-### Color Picker
+### ColorPicker (색상 추출)
 * Color Picker은 그림판이나 PPT 등 다른 프로그램에서 활용하고 있었던 기능으로 간단하게 색상을 알아낼 수 있다.  
 **<font color="red">Window키 + Shift + C</font>** 단축키를 눌러주면 되며 당연히 단축이 변경은 가능하다.  
 
 ![](/assets/post/etc/20210418/09.jpg)  
 나는 그냥 기본으로 체크하여 사용하고 있으며, 설정을 통해 추출하기 원하는 컬러의 형식을 바꿀 수 있다.
 
-### FancyZones
+### FancyZones (화면분할)
 본인이 **PowerToys**에서 가장 유용하다고 생각하는 기능이다.  
 
 일반적으로 `window + 방향키`를 통해서 화면분할을 사용하시는 분들이 많을텐데 
