--- a/_posts/language/vue/2021-04-13-vueStudy04.md
+++ b/_posts/language/vue/2021-04-13-vueStudy04.md
@@ -25,7 +25,7 @@ sitemap: false
 **`v-on`** 라고 하며, Vue 인스턴스에서 메소드를 호출하는 이벤트 리스너를 추가 할 수 있다.  
 
 > 여기서 **이벤트 리스너**란 이벤트가 발생했을 때 그 처리를 담당하는 함수를 가리킨다.
-> 또는 **이벤트 핸드러(event handler)**라고도 한다.
+> 또는 **이벤트 핸들러(event handler)**라고도 한다.
 
 ### Code(코드)
 먼저 아래 사진과 같이 HTML과 스크립트를 살펴보도록 하자.
