add subcategory about elasticsearch

--- a/_posts/etc/programs/2021-04-18-PowerToys01.md
+++ b/_posts/etc/programs/2021-04-18-PowerToys01.md
@@ -4,6 +4,7 @@ title: "[PowerToys] 개발자에게 유용한 프로그램! Microsoft PowerToys 
 subtitle: PowerToys / Microsoft / 개발자
 categories:
     - etc
+    - programs
 description: >
   About the Microsoft's PowerToys intro and guide
 image: /assets/img/blog/tech.png
