edit posting info sitemap to true

--- a/_posts/language/javascript/2021-03-25-ajax01.md
+++ b/_posts/language/javascript/2021-03-25-ajax01.md
@@ -8,7 +8,7 @@ categories:
 description: >
   About the how to use ajax communication simple way
 image: /assets/img/blog/javascript2.jpg
-sitemap: false
+sitemap: true
 ---
 
 안녕하세요! Plitche(플리체)입니다.  
