--- a/_posts/language/javascript/2021-03-17-ajaxHtml.md
+++ b/_posts/language/javascript/2021-03-17-ajaxHtml.md
@@ -8,7 +8,7 @@ categories:
 description: >
   About the ajax communication with type of return is 'HTML'.
 image: /assets/img/blog/javascript2.jpg
-sitemap: false
+sitemap: true
 ---
 
 안녕하세요! Plitche(플리체)입니다.  
