--- a/_posts/language/javascript/2021-05-08-copyURL01.md
+++ b/_posts/language/javascript/2021-05-08-copyURL01.md
@@ -8,7 +8,7 @@ categories:
 description: >
   About the how to make url copy button
 image: /assets/img/blog/javascript2.jpg
-sitemap: true
+sitemap: false
 ---
 
 안녕하세요! Plitche(플리체)입니다.  
