post about Solution of CodeUp's Q1092

--- a/_posts/algorithm/codeup/2021-07-29-CodeUp1089.md
+++ b/_posts/algorithm/codeup/2021-07-29-CodeUp1089.md
@@ -26,7 +26,7 @@ CodeUp(코드업)문제들이 C언어를 기반으로 푸는 분들이 많다보
 
 ## Question
 ### 문제 설명
-![](/assets/post/codeup/20210729_01/01.JPG)
+![](/assets/post/codeup/Q1000~Q1099/0210729_01/01.JPG)
 ### 입력
 시작 값(a), 등차의 값(d), 몇 번째 수 인지를 의미하는 정수(n)가
 공백을 두고 입력된다.(모두 0 ~ 100)
