--- a/_posts/algorithm/codeup/2021-07-30-CodeUp1091.md
+++ b/_posts/algorithm/codeup/2021-07-30-CodeUp1091.md
@@ -22,7 +22,7 @@ image: /assets/img/blog/algorithm01.jpg
 
 ## Question
 ### 문제 설명
-![](/assets/post/codeup/20210730_01/01.JPG)
+<!-- ![](/assets/post/codeup/Q1000~Q109920210730_01/01.JPG) -->
 ### 입력
 시작 값(a), 곱할 값(m), 더할 값(d), 몇 번째 인지를 나타내는 정수(n)가
 공백을 두고 입력된다.(a, m, d는 -50 ~ +50, n은 10이하의 자연수
