--- a/_posts/algorithm/codeup/2021-07-30-CodeUp1092.md
+++ b/_posts/algorithm/codeup/2021-07-30-CodeUp1092.md
@@ -22,10 +22,10 @@ image: /assets/img/blog/algorithm01.jpg
 
 ## Question
 ### 문제 설명
-![](/assets/post/codeup/20210730_02/01.JPG)
+![](/assets/post/codeup/Q1000~Q1099/20210730_02/01.JPG)
 ### 입력
-같은 날 동시에 가입한 인원 3명이 규칙적으로 방문하는,
-방문 주기가 공백을 두고 입력된다. (단, 입력값은 100이하의 자연수이다.)
+같은 날 동시에 가입한 인원 3명이 규칙적으로 방문하는,  
+방문 주기가 공백을 두고 입력된다. (단, 입력값은 100이하의 자연수이다.)  
 ### 출력
 n번째 수를 출력한다.
 ### 예시
