--- a/_posts/algorithm/codeup/2021-07-29-CodeUp1090.md
+++ b/_posts/algorithm/codeup/2021-07-29-CodeUp1090.md
@@ -22,7 +22,7 @@ image: /assets/img/blog/algorithm01.jpg
 
 ## Question
 ### 문제 설명
-![](/assets/post/codeup/20210729_02/01.JPG)
+![](/assets/post/codeup/Q1000~Q1099/20210729_02/01.JPG)
 ### 입력
 시작 값(a), 등비의 값(r), 몇 번째 인지를 나타내는 정수(n)가
 공백을 두고 입력된다.(모두 0 ~ 10)
