edit files directory

--- a/_posts/algorithm/codeup/2021-08-03-CodeUp1165.md
+++ b/_posts/algorithm/codeup/2021-08-03-CodeUp1165.md
@@ -22,7 +22,7 @@ image: /assets/img/blog/algorithm01.jpg
 
 ## Question
 ### 문제 설명
-![](/assets/post/codeup/Q1000~Q1099/20210803_01/01.JPG)
+![](/assets/post/codeup/Q1100~Q1199/20210803_01/01.JPG)
 ### 입력
 현재 경기시간과 우리팀의 득점이 입력으로 주어진다.(정수)  
 
@@ -35,7 +35,7 @@ image: /assets/img/blog/algorithm01.jpg
 * 출력 : 6  
 
 ## Solution (풀이)
-* **풀이 : 메모리 11224, 시간 93**  
+* **풀이 1 : 메모리 11224, 시간 93**  
 ```java
 public class Answer1 {
     public static void main(String[] args) throws IOException {
@@ -81,4 +81,4 @@ public class Answer2 {
 메모리와 시간을 확인해보면 알 수 있듯이, 출력해야하는 데이터가 단순하거나 하나일 때에는 굳이 다른 클래스를 이용하여 출력하는 것 보다 바로 그 값을 출력하는 것이 훨신 속도에 도움이 된다.
 
 ## Ranking(순위)
-![](/assets/post/codeup/Q1000~Q1099/20210803_03/02.JPG)  
+![](/assets/post/codeup/Q1100~Q1199/20210803_03/02.JPG)  
