--- a/_posts/algorithm/codeup/2021-08-07-CodeUp1207.md
+++ b/_posts/algorithm/codeup/2021-08-07-CodeUp1207.md
@@ -75,4 +75,4 @@ public class Answer1 {
 ```  
 
 ## Ranking(순위)
-![](/assets/post/codeup/Q1200~Q1299/20210808_04/02.JPG)  
+![](/assets/post/codeup/Q1200~Q1299/20210809/02.JPG)  
