Post solution of Q1267
Post solution of CodeUp's Question Q1267

--- a/_posts/algorithm/codeup/2021-08-22-CodeUp1266.md
+++ b/_posts/algorithm/codeup/2021-08-22-CodeUp1266.md
@@ -38,7 +38,7 @@ n개의 정수들의 합을 출력한다.
 * 출력 : 24  
 
 ## Solution (풀이)
-* **풀이 1 : 메모리 11436, 시간 86**  
+* **풀이 : 메모리 11436, 시간 86**  
 
 ```java
 public class Answer1 {
