miss write content edit

--- a/_posts/language/java/2021-06-06-Math.md
+++ b/_posts/language/java/2021-06-06-Math.md
@@ -53,7 +53,7 @@ System.out.println("제곱근 : " + Math.sqrt(number));
 
 * **<font color="red"> Math.sqrt()</font>**는 인자에 입력된 숫자의 제곱근을 구할 수 있다.
 
-> **Math.pow("루트를 씌울 숫자 입력");**
+> **Math.sqrt("루트를 씌울 숫자 입력");**
 
 ## Tip or Warn
 **Math.pow()**와 **Math.sqrt()**는 분명 유용한 함수이나, 실습을 해 본 사람이라면 바로 알 수 있겠지만 `double` 타입을 반환한다.  
