edit files directory date

--- a/_posts/algorithm/codeup/2021-09-05-CodeUp1281.md
+++ b/_posts/algorithm/codeup/2021-09-05-CodeUp1281.md
@@ -22,7 +22,7 @@ image: /assets/img/blog/algorithm01.jpg
 
 ## Question
 ### 문제 설명
-![](/assets/post/codeup/Q1200~Q1299/20210904_02/01.JPG)  
+![](/assets/post/codeup/Q1200~Q1299/20210905/01.JPG)  
 
 ### 입력
 두 자연수 a, b가 입력된다.(0)  
@@ -80,4 +80,4 @@ public class Answer1 {
 ```  
 
 ## Ranking(순위)
-![](/assets/post/codeup/Q1200~Q1299/20210904_02/02.JPG)  
+![](/assets/post/codeup/Q1200~Q1299/20210905/02.JPG)  
