--- a/_posts/algorithm/codeup/2021-11-01-CodeUp1477.md
+++ b/_posts/algorithm/codeup/2021-11-01-CodeUp1477.md
@@ -1,28 +1,28 @@
 ---
 layout: post
-title: "[CodeUp] Q1476 : 2차원 배열 순서대로 채우기 3-1 (자바, JAVA)"
-subtitle: java / Q1476 / CodeUp / 코드업
+title: "[CodeUp] Q1477 : 2차원 배열 빗금 채우기 3-2 (자바, JAVA)"
+subtitle: java / Q1477 / CodeUp / 코드업
 categories:
     - algorithm
     - codeup
 description: >
-    About the how to solve question of codeup Q1476
+    About the how to solve question of codeup Q1477
 image: /assets/img/blog/algorithm01.jpg
 ---
 
 안녕하세요! Plitche(플리체)입니다.  
-이번 포스팅의 주제는 **Q1476 2차원 배열 순서대로 채우기 3-1 (자바, JAVA)**입니다.
+이번 포스팅의 주제는 **Q1477 2차원 배열 빗금 채우기 3-2 (자바, JAVA)**입니다.
 
 * toc
 {:toc .large-only}
 
 ## intro
-* [CodeUp(코드업) 문제 확인하기](https://codeup.kr/problem.php?id=1476)  
-* [Github(깃헙) 풀이 확인하기](https://github.com/plitche/CodeUp_Solution/tree/master/Q1301~Q1400/Q1476)  
+* [CodeUp(코드업) 문제 확인하기](https://codeup.kr/problem.php?id=1477)  
+* [Github(깃헙) 풀이 확인하기](https://github.com/plitche/CodeUp_Solution/tree/master/Q1301~Q1400/Q1477)  
 
 ## Question
 ### 문제 설명
-![](/assets/post/codeup/Q1400~Q1499/20211031_02/01.JPG)  
+![](/assets/post/codeup/Q1400~Q1499/20211101_01/01.JPG)  
 
 ### 입력
 첫 번째 줄에 배열의 크기 n m이 입력된다.  
@@ -40,7 +40,7 @@ n*n 크기의 배열을 설명과 같이 채워 출력한다.
 2 4 6  
 
 ## Solution (풀이)
-* **풀이 1 : 메모리 13128, 시간 92**  
+* **풀이 1 : 메모리 13276, 시간 76**  
 
 ```java
 public class Answer1 {
@@ -58,12 +58,12 @@ public class Answer1 {
         
         for (int i=0; i<=n+m-2; i++) {
             //열 반복
-            for (int j=0; j<m; j++) {
+            for (int j=0; j<n; j++) {
                 //행 반복
-                for (int k=0; k<n; k++) {
+                for (int k=0; k<m; k++) {
                     //행과 열의 합이 j와 같다면 count 넣고 증가시키기
                     if (j+k == i) {
-                        arr[k][j] = number++;
+                        arr[j][k] = number++;
                         break;
                     }
                 }
@@ -85,4 +85,4 @@ public class Answer1 {
 ```  
 
 ## Ranking(순위)
-![](/assets/post/codeup/Q1400~Q1499/20211031_02/03.JPG)  
+![](/assets/post/codeup/Q1400~Q1499/20211101_01/03.JPG)  
