Post solution of Q1576
Post solution of CodeUp's Question Q1576

--- a/_posts/algorithm/codeup/2021-11-22-CodeUp1571.md
+++ b/_posts/algorithm/codeup/2021-11-22-CodeUp1571.md
@@ -11,7 +11,7 @@ image: /assets/img/blog/algorithm01.jpg
 ---
 
 안녕하세요! Plitche(플리체)입니다.  
-이번 포스팅의 주제는 **Q1571 함수로 Lower Bound 위치 리턴하기 (자바, JAVA)**입니다.
+이번 포스팅의 주제는 **Q1571 함수로 Upper Bound 위치 리턴하기 (자바, JAVA)**입니다.
 
 * toc
 {:toc .large-only}
