Post solution of Q1706
Post solution of CodeUp's Question Q1706

--- a/_posts/algorithm/codeup/2021-12-06-CodeUp1705.md
+++ b/_posts/algorithm/codeup/2021-12-06-CodeUp1705.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "[CodeUp] Q1705 : 369 개암 (자바, JAVA)"
+title: "[CodeUp] Q1705 : 369 개임 (자바, JAVA)"
 subtitle: java / Q1705 / CodeUp / 코드업
 categories:
     - algorithm
@@ -11,7 +11,7 @@ image: /assets/img/blog/algorithm01.jpg
 ---
 
 안녕하세요! Plitche(플리체)입니다.  
-이번 포스팅의 주제는 **Q1705 369 개암 (자바, JAVA)**입니다.
+이번 포스팅의 주제는 **Q1705 369 개임 (자바, JAVA)**입니다.
 
 * toc
 {:toc .large-only}
