Post solution of Q1709
Post solution of CodeUp's Question Q1709

--- a/_posts/algorithm/codeup/2021-12-07-CodeUp1707.md
+++ b/_posts/algorithm/codeup/2021-12-07-CodeUp1707.md
@@ -39,7 +39,7 @@ image: /assets/img/blog/algorithm01.jpg
 6 4  
   
 ## Solution (풀이)
-* **풀이 : 메모리 11292, 시간 : 반복문 사용으로 실패**  
+* **풀이 : 메모리 11292, 시간 : 69**  
 
 ```java
 public class Answer1 {
