--- a/_posts/algorithm/codeup/2021-12-10-CodeUp1715.md
+++ b/_posts/algorithm/codeup/2021-12-10-CodeUp1715.md
@@ -43,27 +43,22 @@ public class Answer1 {
 	
 	public static void main(String[] args) throws IOException {
         BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+        StringBuilder sb = new StringBuilder();
         StringTokenizer st = new StringTokenizer(br.readLine(), " ");
         
-        int month = Integer.parseInt(st.nextToken());
-        int date = Integer.parseInt(st.nextToken());
+        int up = Integer.parseInt(st.nextToken());
+        int down = Integer.parseInt(st.nextToken());
         
-        int d_day = 0;
-        if (month%2==0) {
-        	d_day+=30-date;
-        } else {
-        	d_day+=31-date;
-        }
-        
-        for (int i=month+1; i<=10; i++) {
-        	if (i%2==0) {
-        		d_day+=30;
-        	} else {
-        		d_day+=31;
+        for (int i=2; i<=up; i++) {
+        	if (up%i==0 && down%i==0) {
+        		up = up/i;
+        		down = down/i;
+        		i--;
         	}
         }
         
-        System.out.println(d_day);
+        sb.append(up).append(" ").append(down);
+        System.out.println(sb);
     }
     	 
 }
